fixed reactie spacing maar alleen boven

--- a/src/style/components/_comment.scss
+++ b/src/style/components/_comment.scss
@@ -46,7 +46,7 @@
 
 		&--comment {
 			grid-column: span 2;
-			padding: 1rem;
+			padding-top: 1rem;
 			
 		}
 	}
